tests/base/parser/bad/exps/exp_t-emp-with.scilexp
Emp uint128 Bool (* should be Uint128 *)
